--- a/tetron.html
+++ b/tetron.html
@@ -16,8 +16,15 @@
 <body>
     <div class="container-fluid" id="canvas_container">
         <div class="row">
-            <canvas id="canvas" class="board" height="720" width="720"></canvas>
+            <canvas id="canvas" class="board"></canvas>
             <div id="canvas_map"></div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-4">
+                <div id="framerate"></div>
+            </div>
+            <div class="col"></div>
         </div>
     </div>
 
@@ -40,6 +47,7 @@
     <script type="text/javascript" src="animata.js"></script>
     <script type="text/javascript" src="action.js"></script>
     <script type="text/javascript" src="bit.js"></script>
+    <script type="text/javascript" src="platform.js"></script>
     <script type="text/javascript" src="html_objects.js"></script>
     <script type="text/javascript" src="tetron.js"></script>
 </body>
