added Hollow object and adjusted scaling and positioning of window layout

--- a/tetron.html
+++ b/tetron.html
@@ -48,6 +48,7 @@
     <script type="text/javascript" src="action.js"></script>
     <script type="text/javascript" src="bit.js"></script>
     <script type="text/javascript" src="platform.js"></script>
+    <script type="text/javascript" src="hollow.js"></script>
     <script type="text/javascript" src="html_objects.js"></script>
     <script type="text/javascript" src="tetron.js"></script>
 </body>
